# ur

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  TODO.md
.agents/brainstorms/: 2026-03-22-frontend-separation-and-core-api-brainstorm.md  2026-03-23-08-30-41-cli-unified-extension-settings-brainstorm.md  2026-03-23-20-54-54-app-workspace-session-core-api-brainstorm.md
.agents/plans/: 2026-03-21-15-16-25-feat-extension-conflicts-and-management-plan.md  2026-03-21-21-03-05-feat-multi-model-roles-and-provider-capabilities-plan.md  2026-03-21-feat-basic-extension-loading-plan.md  2026-03-21-feat-slot-typed-extension-contracts-plan.md  2026-03-22-20-29-56-feat-openrouter-provider-and-dynamic-catalog-plan.md  2026-03-22-feat-agent-turn-tracer-bullet-plan.md  2026-03-22-feat-keyring-api-key-storage-plan.md  2026-03-22-feat-llm-google-gemini-integration-plan.md  2026-03-22-feat-model-metadata-and-info-command-plan.md  2026-03-22-feat-openrouter-provider-and-dynamic-catalog-plan.md  2026-03-22-feat-tool-discovery-and-agent-turn-test-plan.md  2026-03-22-feat-wasmtime-compilation-cache-plan.md  2026-03-22-fix-gemini-stream-session-correlation-plan.md  2026-03-22-refactor-smoke-test-split-and-coverage-plan.md  2026-03-23-08-44-22-feat-unified-extension-settings-cli-plan.md  2026-03-23-21-10-52-feat-app-workspace-session-core-api-plan.md  2026-03-23-22-13-58-fix-unified-session-event-log-plan.md  2026-03-23-22-48-28-fix-unified-session-event-log-with-capabilities-plan.md  2026-03-24-09-15-28-feat-cli-integration-tests-plan.md
.claude/: settings.json
.k/: .gitignore  API.md  DEEPSEEK_API_RESEARCH.md  LOG.md
.k/tasks/20260325173440-read-file-tool-extension/: plan.md
.k/tasks/20260325233243-simplify-fixes/: plan.md
crates/ur/: Cargo.toml
crates/ur-core/: Cargo.toml
crates/ur-core/src/: event.rs  lib.rs  model.rs  provider.rs  schema.rs  tool.rs
crates/ur-deepseek/: Cargo.toml
crates/ur-deepseek/src/: catalog.rs  client.rs  executor.rs  lib.rs  request.rs  sse.rs
crates/ur-macros/: Cargo.toml
crates/ur-macros/src/: lib.rs  tool.rs
crates/ur-macros/tests/: compile_fail.rs
crates/ur-macros/tests/ui/: bad_argument_pattern.rs  bad_argument_pattern.stderr  bad_return_shape.rs  bad_return_shape.stderr  invalid_name.rs  invalid_name.stderr  unknown_attribute.rs  unknown_attribute.stderr  unsupported_signature.rs  unsupported_signature.stderr
crates/ur-openai/: Cargo.toml
crates/ur-openai-compat/: Cargo.toml
crates/ur-openai-compat/src/: executor.rs  keys.rs  lib.rs  request.rs  sse.rs  test_support.rs
crates/ur-openai/src/: client.rs  executor.rs  lib.rs  request.rs  sse.rs
crates/ur-openrouter/: Cargo.toml
crates/ur-openrouter/src/: client.rs  executor.rs  lib.rs  request.rs  sse.rs
crates/ur/examples/: agent.rs  builder.rs  deepseek.rs  deepseek_builder.rs  deepseek_json.rs  deepseek_minimal.rs  deepseek_session.rs  deepseek_strict.rs  deepseek_thinking.rs  effort.rs  json.rs  minimal.rs  openai.rs  openrouter.rs  session.rs  strict.rs  structured_openai.rs  structured_openrouter.rs  thinking.rs
crates/ur/src/: lib.rs
crates/ur/tests/: compile_contracts.rs  compile_pass.rs  deepseek_integration.rs  facade_integration.rs  macro.rs  openai_integration.rs
crates/ur/tests/support/: mod.rs
crates/ur/tests/ui/pass/: api_macro_examples.rs
docs/: API.md  DEEPSEEK.md  LOG.md  OPENAI.md  PLAN.md  extensions.md  index.md
docs/architecture/extensions/: overview.md
docs/development/extensions/: hooks.md  index.md
docs/extensions/: overview.md
docs/internal/brainstorms/: 2026-03-21-13-36-38-extension-conflicts-and-management-brainstorm.md  2026-03-21-19-02-27-slot-typed-contracts-brainstorm.md  2026-03-21-20-45-43-multi-model-roles-brainstorm.md  2026-03-22-09-55-14-llm-google-streaming-brainstorm.md  2026-03-22-13-20-42-self-describing-extensions-brainstorm.md  2026-03-22-19-01-54-wasmtime-compilation-cache-brainstorm.md  2026-03-23-16-15-50-react-loop-hooks-brainstorm.md  2026-03-23-16-42-31-streaming-tool-choice-structured-output-brainstorm.md  2026-03-24-09-05-09-cli-integration-tests-brainstorm.md  2026-03-24-13-18-15-ratatui-tui-first-spike-brainstorm.md  2026-03-24-14-56-08-structured-logging-file-sinks-and-tui-verbosity-brainstorm.md  2026-03-25-08-46-11-lua-extension-pivot-brainstorm.md
docs/internal/plans/: 2026-03-22-06-42-22-feat-pure-logic-unit-tests-plan.md  2026-03-22-13-42-30-feat-self-describing-extensions-and-multi-part-messages-plan.md  2026-03-22-15-34-38-feat-weather-tool-real-llm-paris-smoke-test-plan.md  2026-03-23-17-00-00-feat-streaming-only-tool-choice-structured-output-plan.md  2026-03-23-19-45-00-feat-structured-logging-verbose-flag-plan.md  2026-03-23-22-16-40-feat-install-uninstall-make-targets-plan.md  2026-03-24-14-00-32-feat-ratatui-tui-first-spike-plan.md  2026-03-25-08-48-31-lua-extension-pivot-plan.md  2026-03-25-15-17-10-hook-fidelity-persistence-async-plan.md
docs/providers/: deepseek.md  openai.md  openrouter.md
extensions/system/compaction-llm/: Cargo.toml  extension.toml
extensions/system/llm-google/: Cargo.toml
extensions/system/llm-openai/: Cargo.toml  extension.toml
extensions/test-extension/: Cargo.toml
scripts/: smoke-test.py  smoke-test.sh
scripts/smoke_test/: __init__.py  harness.py  test_agent_turn.py  test_extensions.py  test_google_provider.py  test_integration.py  test_model_roles.py  test_model_settings.py  test_openrouter_provider.py
src/: app.rs  cli.rs  config.rs  discovery.rs  extension_host.rs  extension_settings.rs  hooks.rs  host_api.rs  keyring.rs  lib.rs  logging.rs  lua_host.rs  main.rs  manifest.rs  model.rs  provider.rs  session.rs  slot.rs  turn.rs  types.rs  workspace.rs
src/providers/: compaction.rs  google.rs  mod.rs  openrouter.rs  session_jsonl.rs
tests/cli/: README.md  agent-turn.md  extension.rs  extensions.md  google-provider.md  google.rs  main.rs  model-roles.md  model-settings.md  openrouter-provider.md  openrouter.rs  role.rs  run.rs
tests/extensions/: main.rs  read_file.rs  test_extension.rs
wit/: world.wit
(+24 files in other folders)
