[workspace]
members = [
    "crates/ur",
    "crates/ur-core",
    "crates/ur-deepseek",
    "crates/ur-macros",
    "crates/ur-openai",
    "crates/ur-openrouter",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Kyle Kestell <kyle@kestell.org>"]
repository = "https://github.com/kkestell/ur"
homepage = "https://github.com/kkestell/ur"

[workspace.dependencies]
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
wiremock = "0.6"
