[package]
name = "ur-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Provider-agnostic core types for ur"
keywords = ["llm", "agent", "ai", "tools", "async"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["serde"]
serde = []

[dependencies]
futures-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ur-macros = { version = "0.1.0", path = "../ur-macros" }

[dev-dependencies]
futures-util.workspace = true

