[package]
name = "ur-deepseek"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DeepSeek provider for ur"
keywords = ["llm", "agent", "ai", "deepseek", "async"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["serde"]
serde = ["ur-core/serde", "ur-openai-compat/serde"]

[dependencies]
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ur-core = { version = "0.1.0-alpha.1", path = "../ur-core", default-features = false }
ur-openai-compat = { version = "0.1.0-alpha.1", path = "../ur-openai-compat", default-features = false }

[dev-dependencies]
ur-openai-compat = { version = "0.1.0-alpha.1", path = "../ur-openai-compat", default-features = false, features = ["test-support"] }
wiremock.workspace = true

