[package]
name = "ur-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Procedural macros for ur"
keywords = ["llm", "agent", "ai", "tools", "async"]
categories = ["api-bindings", "asynchronous"]

[lib]
proc-macro = true
