[package]
name = "ur-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for ur"
keywords = ["llm", "agent", "ai", "tools", "async"]
categories = ["api-bindings", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.118", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.116"
