[package]
name = "ur-openrouter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenRouter provider for ur"
keywords = ["llm", "agent", "ai", "openrouter", "async"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["serde"]
serde = ["ur-core/serde"]

[dependencies]
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ur-core = { version = "0.1.0-alpha.1", path = "../ur-core", default-features = false }

[dev-dependencies]
wiremock.workspace = true
