[package]
name = "ur"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Async tool-using LLM agents over a pluggable provider backend"
keywords = ["llm", "agent", "ai", "tools", "async"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["serde", "openai"]
serde = ["ur-core/serde", "ur-deepseek?/serde", "ur-openai?/serde"]
deepseek = ["dep:ur-deepseek"]
openai = ["dep:ur-openai"]

[dependencies]
ur-core = { version = "0.1.0", path = "../ur-core", default-features = false }
ur-deepseek = { version = "0.1.0", path = "../ur-deepseek", default-features = false, optional = true }
ur-macros = { version = "0.1.0", path = "../ur-macros" }
ur-openai = { version = "0.1.0", path = "../ur-openai", default-features = false, optional = true }

[dev-dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1.0.116"
wiremock.workspace = true

[[example]]
name = "deepseek"
required-features = ["deepseek"]

[[example]]
name = "openai"
required-features = ["openai"]
